hphp/test/zend/good/ext/gettext/tests/gettext_textdomain-wrongparams.php
<?php // $Id$

chdir(dirname(__FILE__));
setlocale(LC_ALL, 'en_US.UTF-8');
bindtextdomain ("messages", "./locale");
textdomain (array());

?>